# sift_anatomy

./: CMakeLists.txt  Makefile  README.md
sift_anatomy/: lib_description.cpp  lib_description.hpp  lib_discrete.cpp  lib_discrete.hpp  lib_keypoint.cpp  lib_keypoint.hpp  lib_matching.cpp  lib_matching.hpp  lib_scalespace.cpp  lib_scalespace.hpp  lib_sift.cpp  lib_sift.hpp  lib_sift_anatomy.cpp  lib_sift_anatomy.hpp  lib_util.cpp  lib_util.hpp
